--- a/conf/nginx_ss.conf
+++ b/conf/nginx_ss.conf
@@ -8,7 +8,7 @@ server {
 
     resolver 8.8.8.8:53;
     location / {
-        proxy_pass https://${ProxySite};
+        proxy_pass https://google.com;
     }
     location ${QR_Path} {
         root /wwwroot;
