--- a/conf/nginx_ss.conf
+++ b/conf/nginx_ss.conf
@@ -1,5 +1,3 @@
-# 顶格注释内容在sed处理时将被剔除，不会出现在最后的配置文件中
-
 server {
     listen       ${PORT};
     listen       [::]:${PORT};
@@ -10,11 +8,9 @@ server {
     location / {
         proxy_pass https://google.com;
     }
-    location ${QR_Path} {
-        root /wwwroot;
-    }
-    location = ${V2_Path} {
-        if ($http_upgrade != "websocket") { # WebSocket协商失败时返回404
+
+    location = /v2ray {
+        if ($http_upgrade != "websocket") {
             return 404;
         }
         proxy_redirect off;
