--- a/conf/nginx_ss.conf
+++ b/conf/nginx_ss.conf
@@ -1,6 +1,6 @@
 server {
-    listen       ${PORT};
-    listen       [::]:${PORT};
+    listen       2333;
+    listen       [::]:2333;
 
     root /wwwroot;
 
