--- a/conf/shadowsocks-libev_config.json
+++ b/conf/shadowsocks-libev_config.json
@@ -5,7 +5,5 @@
     "mode": "tcp_and_udp",
     "fast_open":true,
     "reuse_port":true,
-    "no_delay":true,
-    "plugin": "v2ray-plugin",
-    "plugin_opts":"server;path=/v2ray"
+    "no_delay":true
 }
