--- a/conf/nginx_ss.conf
+++ b/conf/nginx_ss.conf
@@ -5,14 +5,8 @@ server {
     root /wwwroot;
 
     resolver 8.8.8.8:53;
-    location / {
-        proxy_pass https://google.com;
-    }
 
-    location = /v2ray {
-        if ($http_upgrade != "websocket") {
-            return 404;
-        }
+    location = / {
         proxy_redirect off;
         proxy_pass http://127.0.0.1:2333;
         proxy_http_version 1.1;
