--- a/conf/nginx_ss.conf
+++ b/conf/nginx_ss.conf
@@ -1,12 +1,11 @@
 server {
-    listen       443;
-    listen       [::]:443;
+	listen 443 default_server;
+	listen [::]:443 default_server;
 
-    root /wwwroot;
-
-    resolver 8.8.8.8:53;
-
-    location = / {
-        proxy_pass http://127.0.0.1:2333;
-    }
+	location / {
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade "websocket";
+		proxy_set_header Connection "upgrade";
+		proxy_pass http://127.0.0.1:2333;
+	}
 }
